--- a/operator-metadata/manifests/bundle.clusterserviceversion.yaml
+++ b/operator-metadata/manifests/bundle.clusterserviceversion.yaml
@@ -357,6 +357,9 @@ metadata:
       ["Red Hat Integration", "Red Hat AMQ"]  
     olm.properties: |-
       [{"type": "olm.maxOpenShiftVersion", "value": "4.9"}]
+  labels:
+    operatorframework.io/arch.amd64: supported
+    operatorframework.io/arch.ppc64le: supported
   name: amqstreams.v1.8.0
   namespace: placeholder
 spec:
